monolith-to-microservices-master/ingress/frontend.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/qwiklabs-gcp-03-68357c2ac320/frontend:v1
        ports:
        - containerPort: 8080  #Refers to internal app port inside containers
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ingress-nginx
spec:
  selector:
    app: frontend
  ports:
  - port: 80    #Each Service manages its own port mapping
    targetPort: 8080 #Refers to container port; Service maps traffic here
  type: ClusterIP
