monolith-to-microservices-master/ingress/products.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: gcr.io/qwiklabs-gcp-03-68357c2ac320/products:v1
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: ingress-nginx
spec:
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 8082
  type: ClusterIP
